Fixes people group select

--- a/ui/static/js/domain/interests/interests.component.html
+++ b/ui/static/js/domain/interests/interests.component.html
@@ -5,7 +5,7 @@
 		</div>
 
 		<div class="list-group">
-			<a ng-repeat="interest in $ctrl.interests"
+			<a ng-repeat="interest in ctrl.interests"
 				ng-href="#interests/{{interest.id}}" class="list-group-item"> <span
 				class="glyphicon glyphicon-user" aria-hidden="true"></span>
 				{{interest.name}}
