--- a/ui/static/js/domain/people/people.component.html
+++ b/ui/static/js/domain/people/people.component.html
@@ -5,7 +5,7 @@
 		</div>
 
 		<div class="list-group">
-			<a ng-repeat="person in $ctrl.people"
+			<a ng-repeat="person in ctrl.people"
 				ng-href="#people/{{person.id}}" class="list-group-item"> <span
 				class="glyphicon glyphicon-user" aria-hidden="true"></span>
 				{{person.name}}
